prun-bugs: Fix user search results box being too big for the tile

--- a/src/features/basic/prun-bugs.module.css
+++ b/src/features/basic/prun-bugs.module.css
@@ -30,3 +30,7 @@
 .containerScrollbarGutter {
   scrollbar-gutter: auto;
 }
+
+.giftSearchResults {
+  max-height: 190px;
+}
